Ready for Java9
Fixed errors in DockingFrames (new org.tors version in Maven).
Fixed deprecation warnings.